--- a/doc/library.bib
+++ b/doc/library.bib
@@ -1,3 +1,11 @@
+@misc{omp,
+  author = {{OpenMP Architecture Review Board}},
+  title = {{OpenMP} Application Program Interface Version 4.5},
+  month = november,
+  year = 2015,
+  url = {https://www.openmp.org/wp-content/uploads/openmp-4.5.pdf}
+}
+
 @misc{cirrus,
   author = {EPCC},
   title = {{Cirrus}},
@@ -81,6 +89,20 @@ doi = {10.1109/FCCM.2011.34}
   title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- fpp}},
   year=2019,
   url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-fpp},
+}
+
+@misc{xcore_avx2,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- x}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-x-qx},
+}
+
+@misc{vec_threshold0,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- vec-threshold}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-vec-threshold-qvec-threshold},
 }
 
 @misc{o,
