--- a/doc/library.bib
+++ b/doc/library.bib
@@ -91,6 +91,41 @@ doi = {10.1109/FCCM.2011.34}
   url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-fpp},
 }
 
+@misc{fp_speculation,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- fp-speculation}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-fp-speculation-qfp-speculation},
+}
+
+@misc{fma,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- fma}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-fma-qfma},
+}
+
+@misc{qopt_prefetch,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- qopt-prefetch}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-qopt-prefetch-qopt-prefetch},
+}
+
+@misc{qopt_mem_layout_trans,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- qopt-mem-layout-trans}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-qopt-mem-layout-trans-qopt-mem-layout-trans},
+}
+
+@misc{pad,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- pas}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-pad-qpad},
+}
+
 @misc{xcore_avx2,
   author={Intel},
   title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- x}},
