--- a/doc/library.bib
+++ b/doc/library.bib
@@ -42,6 +42,13 @@ journal = {Proceedings - IEEE International Symposium on Field-Programmable Cust
 doi = {10.1109/FCCM.2011.34}
 }
 
+@misc{krishnaiyer2015,
+  author={Rakesh Krishnaiyer},
+  title={{Data Alignment to Assist Vectorization}},
+  year=2015,
+  url={https://software.intel.com/en-us/articles/data-alignment-to-assist-vectorization},
+}
+
 @misc{ifort18,
   author = {Intel},
   title  = {{Intel Fortran Compiler 18.0 for Linux}},
